--- a/MeuSite/Refazendo meu site/Home.html
+++ b/MeuSite/Refazendo meu site/Home.html
@@ -14,22 +14,41 @@
 <header>
     <div id="area-cabecalho">
         <div class="logo">
-            <span>
-                GabsMarc
-            </span>
+            <span class="branco">Gabs</span>
+            <span>Marc</span>
         </div>
 
         <div class="menu">
             <a href="">Saiba Mais</a><
         </div>
-    </div>
+    </div> <!-- fim cabecalho -->
 </header>
 
 <body>
     
-    <Section class="main">
+    <div class="main">
+   
+        <div class="nav-superior">
+            <ul>
+                <li><a href="">Meus Contatos</a></li>
+                <li><a href="">Quem é Gabriel Marcucci</a></li>
+                <li><a href="">O que estou estudando no momento?</a></li>
+            </ul>
+        </div>  <!-- fim nav-superior -->
 
-    </Section>
+    </div> <!-- fim main -->
+
 
 </body>
+
+<footer>
+
+    <div class="rodape">
+        <div class="direitos">
+            <p>Todos os direitos não estão reservados.</p>
+        </div>
+    </div> <!-- fim rodape-->
+
+</footer>
+
 </html>
