--- a/MeuSite/Refazendo meu site/Quem_Sou.html
+++ b/MeuSite/Refazendo meu site/Quem_Sou.html
@@ -38,9 +38,8 @@
             </ul>
         </div>  <!-- fim nav-superior -->
 
-        <div class="conteudo">
-            <h1>Bem vindo!</h1>
-            <p>Este é um site onde eu busco aplicar tudo aquilo que eu ando aprendendo</p>
+        <div class="foto">           
+                <img src="../img/Minha foto.png">         
         </div>
 
 
