--- a/MeuSite/Refazendo meu site/Quem_Sou.html
+++ b/MeuSite/Refazendo meu site/Quem_Sou.html
@@ -32,15 +32,16 @@
    
         <div class="nav-superior">
             <ul>
-                <li><a href="">Meus Contatos</a></li>
+                <li><a href="Home.html">Meus Contatos</a></li>
                 <li><a href="Quem_Sou.html">Quem é Gabriel Marcucci</a></li>
                 <li><a href="">O que estou estudando no momento?</a></li>
             </ul>
         </div>  <!-- fim nav-superior -->
 
-        <div class="foto">           
-                <img src="../img/Minha foto.png">         
+        <div class="foto"> 
+            <img src="../img/Minha foto.png"> 
         </div>
+        
 
 
     </div> <!-- fim main -->
