--- a/MeuSite/Refazendo meu site/Home.html
+++ b/MeuSite/Refazendo meu site/Home.html
@@ -21,7 +21,7 @@
         </div>
 
         <div class="menu">
-            <a href="">Saiba Mais</a><
+            <a href="">Saiba Mais</a>
         </div>
     </div> <!-- fim cabecalho -->
 </header>
@@ -43,6 +43,13 @@
                 <p>Este é um site onde eu busco aplicar tudo aquilo que eu ando aprendendo</p>
         </div>
 
+
+        <div id="flex">
+            <div class="html"></div>
+            <div class="css"></div>
+            <div class="javascript"></div>
+        </div>
+        
 
     </div> <!-- fim main -->
 
