--- a/MeuSite/Refazendo meu site/Quem_Sou.html
+++ b/MeuSite/Refazendo meu site/Quem_Sou.html
@@ -21,7 +21,7 @@
         </div>
 
         <div class="menu">
-            <a href="">Saiba Mais</a><
+            <a href="">Saiba Mais</a>
         </div>
     </div> <!-- fim cabecalho -->
 </header>
