--- a/MeuSite/Refazendo meu site/Home.html
+++ b/MeuSite/Refazendo meu site/Home.html
@@ -14,7 +14,7 @@
 <header>
     <div id="area-cabecalho">
         <div class="logo">
-            <a href="Home.html">
+            <a href="home.html">
                 <span class="branco">Gabs</span>
                 <span>Marc</span>
             </a>
@@ -32,7 +32,7 @@
    
         <div class="nav-superior">
             <ul>
-                <li><a href="">Meus Contatos</a></li>
+                <li><a href="contatos.html">Meus Contatos</a></li>
                 <li><a href="Quem_Sou.html">Quem é Gabriel Marcucci</a></li>
                 <li><a href="">O que estou estudando no momento?</a></li>
             </ul>
@@ -45,9 +45,9 @@
 
 
         <div id="flex">
-            <div class="html"></div>
-            <div class="css"></div>
-            <div class="javascript"></div>
+            <div class="img_html"></div>
+            <div class="img_css"></div>
+            <div class="img_js"></div>
         </div>
         
 
