--- a/MeuSite/Refazendo meu site/Quem_Sou.html
+++ b/MeuSite/Refazendo meu site/Quem_Sou.html
@@ -14,7 +14,7 @@
 <header>
     <div id="area-cabecalho">
         <div class="logo">
-            <a href="Home.html">
+            <a href="home.html">
                 <span class="branco">Gabs</span>
                 <span>Marc</span>
             </a>
@@ -32,8 +32,8 @@
    
         <div class="nav-superior">
             <ul>
-                <li><a href="Home.html">Meus Contatos</a></li>
-                <li><a href="Quem_Sou.html">Quem é Gabriel Marcucci</a></li>
+                <li><a href="home.html">Meus Contatos</a></li>
+                <li><a href="quem_sou.html">Quem é Gabriel Marcucci</a></li>
                 <li><a href="">O que estou estudando no momento?</a></li>
             </ul>
         </div>  <!-- fim nav-superior -->
